# FormsValidation

./: .gitignore  Dockerfile  README.md  docker-compose.yml
mongodb_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7641362165909700492.wt  collection-2--7641362165909700492.wt  collection-7--7641362165909700492.wt  index-1--7641362165909700492.wt  index-3--7641362165909700492.wt  index-8--7641362165909700492.wt  index-9--7641362165909700492.wt  sizeStorer.wt
mongodb_data/.mongodb/mongosh/: 655700bebf153887ced1a008_log  655700bf05e0c47ce96c3f72_log  am-655700bebf153887ced1a007.json  config
mongodb_data/diagnostic.data/: metrics.2023-11-17T05-57-18Z-00000  metrics.2023-11-17T05-57-32Z-00000  metrics.2023-11-17T06-00-44Z-00000
src/: pyproject.toml  requirements.txt
src/app/: database.py  routes.py  validator.py
src/app/database/: fill_db.py
src/app/utils/: type_specifier.py  validator.py
